# puffbox

./: .gitignore  README.md  pyproject.toml
puffbox/: __init__.py  cli.py  pipeline.py  render.py  spritesheet.py
puffbox/blender_scripts/: build_text.py  render_sprite.py
puffbox/sources/: image.py  meshy.py  model.py  text.py
